2003-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/g_netlist.c, gnetlist.c: Applied Carlos Nieves Onega's warning
	cleanup patch.

2003-06-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/prototype.h, scheme/Makefile.am, scheme/gnet-drc2.scm
 	src/g_netlist.c src/g_register.c: Integrated Carlos Nieves Onega's
	drc2 backend.  Thanks.

	* src/g_netlist.c: Renamed the newly added guile functions a little.
	(removed the "*used-of-package" string; just for consistancy with
	 the other guile functions).

2003-06-14 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/globals.h, src/globals.c, src/gnetlist.c,
	src/parsecmd.c: Applied Carlos Nieves Onega's -l load scheme
	patch.  Thanks.

	* src/gnetlist.1: Updated manpage with new -l flag
	
2003-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_traverse.c, src/s_netlist.c: Renamed a couple forgotten
	uref's to refdes.

	* src/s_cpinlist.c: Added #include <string.h>

2003-05-22 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Updated version

	* examples/*.sch: Updated to latest file version

2003-05-13 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gnetlist.1: Applied man page patch by Dan McMahill.  

	* scheme/gnet-spice-sdb.scm: Integrated bug fix patch from 
	Stuart Brorson (for .OPTION handling).

2003-04-27 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in, docs/Makefile.am, docs/README.switcap, 
	examples/Makefile.am, examples/switchcap/, scheme/Makefile.am,
	scheme/gnet-switchcap, scripts/Makefile.am, scripts/sw2asc.in: 
	Integrated Dan McMahill's switcap backend

	* scheme/Makefile.am, scheme/gnet-spice-sdb.scm, src/gnetlist.c:
	Integrated Stuart Brorson's advanced spice backend.

	* tests/: added some regression tests for the new backends

2003-03-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-PCBboard.scm: Removed a "(false-if-exception  ...)
   	so that this backend works with guile 1.6.3.  Patch by Dan McMahill.

2003-02-20 Ales Hvezda   <ahvezda@geda.seul.org>
