@@ -56,5 +56,6 @@ extern int interactive_mode;
 extern int quiet_mode;
 extern int netlist_mode;
 extern char *output_filename;
-extern GSList *load_files_list;
+extern GSList *pre_backend_list;  /* before backend loaded */
+extern GSList *post_backend_list; /* after backend loaded, before execute */
 
