@@ -1,6 +1,6 @@
-.TH gEDA 1 "July 5th, 1999" Version 19990705
+.TH gEDA 1 "May 25th, 2003" Version 20030525
 .SH NAME
-gnetlist - GPL Netlist extraction/generation
+gnetlist - gEDA/gaf Netlist extraction/generation
 .SH SYNOPSIS
 .B gnetlist
 [-i] [-v] [-r rcfilename] [-g guile_procedure] [-o output_filename] schematic1 [... schematicN]
@@ -60,16 +60,23 @@ Specify the filename which will contain the netlist generated by gnetlist.  If t
 .TP 8
 .B -l scheme_file
 Specify a filename which contains scheme code to be loaded and
-execute before any guile procedure (using -g flag) is executed.  This
-flag can be specified multiple times and can be used to pass
-information to backends.
+execute before any backend is loaded or any guile procedure (using -g flag) 
+is executed.  This flag can be specified multiple times and can be used to 
+pass information to backends.
+.TP 8
+.B -m scheme_file
+Specify a filename which contains scheme code to be loaded and
+execute after the backend is loaded but still before any guile procedure 
+(using -g flag) is executed.  This flag can be specified multiple times 
+and can be used to pass information to backends.  This flag, for example, 
+allows the user to override variables inside of the backends (such as paths).
 .TP 8
 .B -c string
 Pass the specified string to the guile interpreter.  This allows you to 
 execute arbitrary guile scripts from the command line.  Be sure to surround
 the string with either single or double quotes to satisfy your shell.  The
 string is execute before any init or netlist backend scheme code is
-executed.
+loaded or executed.
 .TP 8
 .B -i 
 Interactive mode.  After the schematic is read in and parsed and, if specified,
