@@ -1,6 +1,6 @@
-.TH gEDA 1 "July 5th, 1999" Version 19990705
+.TH gEDA 1 "May 25th, 2003" Version 20030525
 .SH NAME
-gschem - GPL Schematic Capture
+gschem - gEDA/gaf Schematic Capture
 .SH SYNOPSIS
 .B gschem
 [-q] [-v] [-r rcfilename] [-s scriptfilename] [-o outputfilename] [schematic1 ... schematicN]
@@ -83,7 +83,7 @@ Ales V. Hvezda and many others
 .BR gnetlist (1),
 .SH COPYRIGHT
 .nf
-Copyright \(co  1999 Ales V Hvezda
+Copyright \(co  1999-2003 Ales V Hvezda
 
 This document can be freely redistributed according to the terms of the 
 GNU General Public License version 2.0
