@@ -1,6 +1,6 @@
-.TH gEDA 1 "July 5th, 1999" Version 19990705
+.TH gEDA 1 "May 25th, 2003" Version 20030525
 .SH NAME
-gsymcheck - GNU Symbol Checker
+gsymcheck - gEDA/gaf Symbol Checker
 .SH SYNOPSIS
 .B gnetlist
 [-h] [-v] [-q] symbol1 [... symbolN]
@@ -48,7 +48,7 @@ Ales V. Hvezda and many others
 .BR gnetlist (1),
 .BR gsymcheck (1)
 .SH COPYRIGHT
-Copyright \(co  1999-2002 Ales V Hvezda
+Copyright \(co  1999-2003 Ales V Hvezda
 
 This document can be freely redistributed according to the terms of the 
 GNU General Public License version 2.0
