@@ -41,9 +41,9 @@ void
 usage(char *cmd)
 {
 	printf("Usage: %s [OPTIONS] filename1 ... filenameN\n", cmd);
-	printf("  -h  		Print usage\n");
-	printf("  -q  		Quiet mode\n");
-	printf("  -v  		Verbose mode (cumulative: errors, warnings, info)\n");
+	printf("  -h            Print usage\n");
+	printf("  -q            Quiet mode\n");
+	printf("  -v            Verbose mode (cumulative: errors, warnings, info)\n");
 	printf("                Use this to get the actual symbol error messages\n");
 	printf("\nfilename1 ... filenameN are the symbols to check\n");
 	printf("\n");
